--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-
-  <title>The HTML5 Herald</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-
+  <title>CV</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <script src="js/scripts.js"></script>
+  <header>
+   Header text
+  </header>
+  <footer>
+   Footer text
+  </footer>
 </body>
+
 </html>
